sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_3_sample_3_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_3_sample_3_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │   3 │     ║     │   3 │     ║     │     │     ║
    - ║     │   6 │  4  ║  5  │     │  2  ║  1  │  7  │  8  ║
    - ║   9 │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │  2  │  2  ║     │     │     ║  2  │     │     ║
    - ║  1  │   6 │  56 ║   6 │  9  │ 4 6 ║     │  3  │  56 ║
    - ║     │  8  │ 78  ║ 7   │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │  23 ║     │ 1 3 │ 1   ║  2  │     │     ║
    - ║  5  │   6 │  56 ║  8  │     │   6 ║     │  56 │  4  ║
    - ║ 7 9 │     │ 7 9 ║     │ 7   │ 7   ║   9 │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │  23 │  23 ║     │     │ 1   ║   3 │     │   3 ║
    - ║  6  │     │     ║  4  │  5  │     ║     │     │     ║
    - ║     │     │   9 ║     │     │ 78  ║ 7 9 │  89 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║   3 │     │     ║
    - ║  5  │  7  │  5  ║  9  │     │   6 ║ 4   │  1  │  2  ║
    - ║     │     │     ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │ 4   │  1  ║  2  │     │  3  ║  5  │ 4 6 │   6 ║
    - ║     │     │     ║     │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 12  │  2  ║ 1   │ 12  │ 1   ║   3 │     │     ║
    - ║  4  │   6 │   6 ║     │     │  5  ║     │  5  │  9  ║
    - ║     │  8  │ 78  ║ 7   │ 78  │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║ 1   │     │ 1   ║     │     │     ║
    - ║  3  │  5  │     ║     │  6  │ 4   ║  8  │ 4   │  7  ║
    - ║     │     │     ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │ 1   ║
    - ║     │  9  │     ║  3  │ 4   │ 45  ║  6  │  2  │  5  ║
    - ║ 7   │     │ 78  ║     │ 78  │ 78  ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c1: delete candidate 3, because of: r0c4: candidate 3"
    - "r1c1: delete candidate 2, r1c2: delete candidate 2, because of: r1c6: candidate 2"
    - "r1c2: delete candidate 2, r2c2: delete candidate 2, r3c2: delete candidate 2, r6c2: delete candidate 2, because of: r7c2: candidate 2"
    - "r1c8: delete candidate 6, because of: r5c8: candidate 6"
    - "r2c0: delete candidate 9, because of: r0c0: candidate 9"
    - "r2c0: delete candidate 9, r2c2: delete candidate 9, because of: r0c0: candidate 9"
    - "r2c4: delete candidate 3, because of: r0c4: candidate 3"
    - "r2c6: delete candidate 2, because of: r1c6: candidate 2"
    - "r2c7: delete candidate 5, because of: r6c7: candidate 5"
    - "r3c1: delete candidate 3, r3c2: delete candidate 3, r3c6: delete candidate 3, because of: r3c8: candidate 3"
    - "r3c5: delete candidate 8, r4c5: delete candidate 8, because of: r4c4: candidate 8"
    - "r3c6: delete candidate 3, r4c6: delete candidate 3, because of: r3c8: candidate 3"
    - "r4c2: delete candidate 5, because of: r4c0: candidate 5"
    - "r5c7: delete candidate 4, because of: r5c1: candidate 4"
    - "r6c1: delete candidate 2, r6c2: delete candidate 2, because of: r7c2: candidate 2"
    - "r6c1: delete candidates 2,6,8, because of: r6c1: candidate 1"
    - "r6c3: delete candidate 1, because of: r7c3: candidate 1"
    - "r6c3: delete candidate 1, r6c4: delete candidate 1, r6c5: delete candidate 1, r7c5: delete candidate 1, r8c4: delete candidate 1, r8c5: delete candidate 1, because of: r7c3: candidate 1"
    - "r6c5: delete candidate 5, because of: r6c7: candidate 5"
    - "r7c5: delete candidate 1, because of: r7c3: candidate 1"
    - "r7c5: delete candidates 1,4, because of: r7c5: candidate 9"
    - "r8c2: delete candidate 7, r8c4: delete candidate 7, r8c5: delete candidate 7, because of: r8c0: candidate 7"
    - "r8c8: delete candidate 5, because of: r6c7: candidate 5"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │   3 │     ║     │     │     ║
    - ║     │   6 │  4  ║  5  │     │  2  ║  1  │  7  │  8  ║
    - ║   9 │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║  2  │     │     ║
    - ║  1  │   6 │  56 ║   6 │  9  │ 4 6 ║     │  3  │  5  ║
    - ║     │  8  │ 78  ║ 7   │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │   3 ║     │ 1   │ 1   ║     │     │     ║
    - ║  5  │   6 │  56 ║  8  │     │   6 ║     │   6 │  4  ║
    - ║ 7   │     │ 7   ║     │ 7   │ 7   ║   9 │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │  2  │     ║     │     │ 1   ║     │     │   3 ║
    - ║  6  │     │     ║  4  │  5  │     ║     │     │     ║
    - ║     │     │   9 ║     │     │ 7   ║ 7 9 │  89 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║     │     │     ║
    - ║  5  │  7  │     ║  9  │     │   6 ║ 4   │  1  │  2  ║
    - ║     │     │     ║     │  8  │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │ 4   │  1  ║  2  │     │  3  ║  5  │   6 │   6 ║
    - ║     │     │     ║     │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │     ║     │  2  │     ║   3 │     │     ║
    - ║  4  │     │   6 ║     │     │     ║     │  5  │  9  ║
    - ║     │     │ 78  ║ 7   │ 78  │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║ 1   │     │     ║     │     │     ║
    - ║  3  │  5  │     ║     │  6  │     ║  8  │ 4   │  7  ║
    - ║     │     │     ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │ 1   ║
    - ║     │  9  │     ║  3  │ 4   │ 45  ║  6  │  2  │     ║
    - ║ 7   │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 4
        candidates:
          - 3
    actions:
      - position:
          row: 0
          column: 1
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 1
          column: 6
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 1
        deleteCandidates:
          - 2
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 7
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 2
      - position:
          row: 2
          column: 2
        deleteCandidates:
          - 2
      - position:
          row: 3
          column: 2
        deleteCandidates:
          - 2
      - position:
          row: 6
          column: 2
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 5
          column: 8
        candidates:
          - 6
    actions:
      - position:
          row: 1
          column: 8
        deleteCandidates:
          - 6
  - reasons:
      - position:
          row: 0
          column: 0
        candidates:
          - 9
    actions:
      - position:
          row: 2
          column: 0
        deleteCandidates:
          - 9
  - reasons:
      - position:
          row: 0
          column: 0
        candidates:
          - 9
    actions:
      - position:
          row: 2
          column: 0
        deleteCandidates:
          - 9
      - position:
          row: 2
          column: 2
        deleteCandidates:
          - 9
  - reasons:
      - position:
          row: 0
          column: 4
        candidates:
          - 3
    actions:
      - position:
          row: 2
          column: 4
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 1
          column: 6
        candidates:
          - 2
    actions:
      - position:
          row: 2
          column: 6
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 6
          column: 7
        candidates:
          - 5
    actions:
      - position:
          row: 2
          column: 7
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 3
          column: 8
        candidates:
          - 3
    actions:
      - position:
          row: 3
          column: 1
        deleteCandidates:
          - 3
      - position:
          row: 3
          column: 2
        deleteCandidates:
          - 3
      - position:
          row: 3
          column: 6
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 4
          column: 4
        candidates:
          - 8
    actions:
      - position:
          row: 3
          column: 5
        deleteCandidates:
          - 8
      - position:
          row: 4
          column: 5
        deleteCandidates:
          - 8
  - reasons:
      - position:
          row: 3
          column: 8
        candidates:
          - 3
    actions:
      - position:
          row: 3
          column: 6
        deleteCandidates:
          - 3
      - position:
          row: 4
          column: 6
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 4
          column: 0
        candidates:
          - 5
    actions:
      - position:
          row: 4
          column: 2
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 5
          column: 1
        candidates:
          - 4
    actions:
      - position:
          row: 5
          column: 7
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 7
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 6
          column: 1
        deleteCandidates:
          - 2
      - position:
          row: 6
          column: 2
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 6
          column: 1
        candidates:
          - 1
    actions:
      - position:
          row: 6
          column: 1
        deleteCandidates:
          - 2
          - 6
          - 8
  - reasons:
      - position:
          row: 7
          column: 3
        candidates:
          - 1
    actions:
      - position:
          row: 6
          column: 3
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 7
          column: 3
        candidates:
          - 1
    actions:
      - position:
          row: 6
          column: 3
        deleteCandidates:
          - 1
      - position:
          row: 6
          column: 4
        deleteCandidates:
          - 1
      - position:
          row: 6
          column: 5
        deleteCandidates:
          - 1
      - position:
          row: 7
          column: 5
        deleteCandidates:
          - 1
      - position:
          row: 8
          column: 4
        deleteCandidates:
          - 1
      - position:
          row: 8
          column: 5
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 6
          column: 7
        candidates:
          - 5
    actions:
      - position:
          row: 6
          column: 5
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 7
          column: 3
        candidates:
          - 1
    actions:
      - position:
          row: 7
          column: 5
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 7
          column: 5
        candidates:
          - 9
    actions:
      - position:
          row: 7
          column: 5
        deleteCandidates:
          - 1
          - 4
  - reasons:
      - position:
          row: 8
          column: 0
        candidates:
          - 7
    actions:
      - position:
          row: 8
          column: 2
        deleteCandidates:
          - 7
      - position:
          row: 8
          column: 4
        deleteCandidates:
          - 7
      - position:
          row: 8
          column: 5
        deleteCandidates:
          - 7
  - reasons:
      - position:
          row: 6
          column: 7
        candidates:
          - 5
    actions:
      - position:
          row: 8
          column: 8
        deleteCandidates:
          - 5
